fix download toast stacking, border, text align

--- a/src/frontend/components/UI/DownloadToastManager/index.module.scss
+++ b/src/frontend/components/UI/DownloadToastManager/index.module.scss
@@ -9,4 +9,5 @@
   position: absolute;
   bottom: 5%;
   right: 5%;
+  z-index: 1000;
 }
